<resources>
    <string name="app_name">TrackRunning</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="main_exit">Press back again to Exit</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_running">Running</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_preset">Run Preset</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_help">Help</string>
    <string name="help_email">jaykim.coding@gmail.com</string>
    <string name="help_inquiry">For any inquiry, email</string>
    <string name="menu_preset_exp">Customize your own run routine. \nAdd run distance and rest time.\nDelete the item by swapping to left.\nDrag and move the item by holding.</string>
    <string name="help_running_exp">"You can easily run simple repeats with Quick Start. \nFor more complex run routine, create your own preset.Long click the preset you created to see the summary of run routine."</string>
    <string name="menu_activities_exp">Check your past run activities.\nTo see the fastest and average time, select the distance.</string>
    <string name="setting_language">default</string>

    <string name="running_radio_qs">Quick Start</string>
    <string name="running_radio_pre">Preset</string>
    <string name="running_meter">m</string>
    <string name="running_laps">Laps</string>
    <string name="running_sec">Sec</string>
    <string name="running_rest">Rest</string>
    <string name="running_unselected">Please select a preset</string>

    <string name="run_btn_start">START</string>
    <string name="run_btn_record">RECORD</string>
    <string name="run_btn_stop">STOP</string>
    <string name="run_btn_break">BREAK</string>

    <string name="finished_btn_back">Back To Main Menu</string>
    <string name="finished_completed">Workout Completed!</string>
    <string name="finished_fastest">Fastest Lap Time</string>
    <string name="finished_average">Average Lap Time</string>
    <string name="finished_totaltime">Total Workout Time</string>
    <string name="finished_totaldist">Total Distance</string>
    <string name="finished_title_run">RUN</string>

    <string name="activity_back">Back</string>
    <string name="activity_delete">Delete</string>
    <string name="activity_deleted">deleted</string>
    <string name="activity_deleteDialog">Are you sure you want to Delete?</string>
    <string name="activity_delete_yes">Yes</string>
    <string name="activity_delete_no">No</string>
    <string name="activity_endDialog">End the Workout?</string>

    <string name="activities_no_data">No Activities</string>

    <string name="preset_no_data">Create your own preset.</string>
    <string name="preset_titleDialog">Run List</string>

    <string name="preset_add_done">Done</string>
    <string name="preset_add_back">Back</string>
    <string name="preset_add_distance">Distance</string>
    <string name="preset_add_run">Run</string>
    <string name="preset_add_break">Break</string>
    <string name="preset_add_hint">Enter Preset title\n</string>
    <string name="preset_add_navTitle">New Preset</string>
    <string name="preset_add_noItem">Please add an item.</string>
    <string name="preset_addlist_norun">Add runs</string>
    <string name="preset_addlist_break">Add break between runs</string>
    <string name="preset_add_defaultTitle">My Custom Run</string>
    <string name="preset_add_deleted">deleted</string>
    <string name="preset_add_add">Add</string>
    <string name="pref_language">Language</string>

    <string name="preset_not_found">Error: No preset found.</string>
    <string name="activity_not_found">Error: No activity found.</string>
    <string name="finished_save_failed">Failed to save your workout. Please try again.</string>
    <string name="finished_saving_wait">Saving your workout, please wait…</string>

    <string name="timer_btn_start">START</string>
    <string name="timer_btn_pause">PAUSE</string>
    <string name="timer_btn_lap">LAP</string>
    <string name="timer_btn_reset">RESET</string>
    <string name="timer_no_laps">No laps recorded yet</string>
    <string name="timer_lap_label">Lap %1$d</string>
    <string name="timer_header_lap">Lap</string>
    <string name="timer_header_lap_time">Lap Time</string>
    <string name="timer_header_total_time">Total</string>
    <string name="timer_current_lap_label">Current Lap</string>






</resources>