<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


    <TextView
        android:id="@+id/menu_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_running"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"


        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintRight_toRightOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/menu_running"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:text="@string/help_running_exp"

        />



    <TextView
        android:id="@+id/menu_preset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_preset"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        android:textStyle="bold"
        android:textSize="20sp"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintRight_toRightOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/menu_preset"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:text="@string/menu_preset_exp"

        />


    <TextView
        android:id="@+id/menu_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_activities"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        android:textStyle="bold"
        android:textSize="20sp"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintRight_toRightOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/menu_activities"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:text="@string/menu_activities_exp"


        />


    <TextView
        android:id="@+id/help_inquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_inquiry"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline3" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_email"
        app:layout_constraintLeft_toLeftOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/help_inquiry"
        android:layout_marginTop="10dp"
        android:autoLink="email"

        />




</androidx.constraintlayout.widget.ConstraintLayout>