<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresetAddFragment"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preset_add_enter_title"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:hint="@string/preset_add_hint"
        android:singleLine="true"
        android:maxLines="1"




        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/preset_add_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        tools:listitem="@layout/rv_item_preset_add"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="visible"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/preset_add_dist"
        android:text="@string/preset_add_distance"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/preset_add_npdist"
        app:layout_constraintEnd_toEndOf="@id/preset_add_npdist"
        app:layout_constraintBottom_toTopOf="@id/preset_add_npdist"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/preset_add_rest"
        android:text="@string/preset_add_break"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/preset_add_nprest"
        app:layout_constraintEnd_toEndOf="@id/preset_add_nprest"
        app:layout_constraintBottom_toTopOf="@id/preset_add_nprest"
        />





    <NumberPicker
        android:id="@+id/preset_add_npdist"
        android:layout_width="100dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/preset_add_dist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/preset_add_nprest"
        app:layout_constraintBottom_toTopOf="@id/preset_add_btnDist"
        android:fadingEdge="vertical"
        />

    <NumberPicker
        android:id="@+id/preset_add_nprest"
        android:layout_width="100dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/preset_add_rest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/preset_add_npdist"
        app:layout_constraintBottom_toTopOf="@id/preset_add_btnRest"

        />

    <ImageView
        android:id="@+id/preset_add_btnDist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/preset_add_npdist"
        app:layout_constraintStart_toStartOf="@id/preset_add_npdist"
        app:layout_constraintEnd_toEndOf="@id/preset_add_npdist"
        android:src="@drawable/baseline_add_circle_outline_24"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/preset_add_add"
        />


    <ImageView
        android:id="@+id/preset_add_btnRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/preset_add_nprest"
        app:layout_constraintStart_toStartOf="@id/preset_add_nprest"
        app:layout_constraintEnd_toEndOf="@id/preset_add_nprest"
        android:src="@drawable/baseline_add_circle_outline_24"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/preset_add_add"
        />

    <Button
        android:id="@+id/preset_add_done"
        android:layout_width="100sp"
        android:layout_height="80dp"
        android:text="@string/preset_add_done"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/preset_add_back"
        />

    <Button
        android:id="@+id/preset_add_back"
        android:layout_width="100sp"
        android:layout_height="80dp"
        android:text="@string/preset_add_back"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/preset_add_done"
        app:layout_constraintRight_toRightOf="parent"
        />







</androidx.constraintlayout.widget.ConstraintLayout>