<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/finished_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_completed"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/finished_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:layout_marginStart="14dp"/>

    <TextView
        android:id="@+id/finished_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="2023.08.29"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/finished_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finished_completed"
        android:layout_marginStart="14dp"
        />

    <TextView
        android:id="@+id/finished_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Morning Run"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_finished1"
        app:layout_constraintStart_toStartOf="@id/finished_date"
        app:layout_constraintTop_toBottomOf="@id/finished_date"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_finished1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/finished_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_finished2"
        app:layout_constraintTop_toBottomOf="@id/guideline_finished1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_finished2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_finished3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_finished4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_totalTime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_finished4"
        app:layout_constraintTop_toBottomOf="@id/guideline_finished2"
        app:layout_constraintBottom_toTopOf="@id/tv_totalDist1"
        android:text="@string/finished_totaltime"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_totalTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_finished4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_finished2"
        app:layout_constraintBottom_toTopOf="@id/tv_totalDist2"
        android:text="00:00:00"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_totalDist1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_finished4"
        app:layout_constraintTop_toBottomOf="@id/tv_totalTime1"
        app:layout_constraintBottom_toTopOf="@id/tv_fastest_laptime1"
        android:text="@string/finished_totaldist"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tv_totalDist2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_finished4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_totalTime2"
        app:layout_constraintBottom_toTopOf="@id/tv_fastest_laptime2"
        android:text="00m"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_fastest_laptime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_fastest"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_finished4"
        app:layout_constraintTop_toBottomOf="@id/tv_totalDist1"
        app:layout_constraintBottom_toTopOf="@id/tv_avg_laptime1"
        />

    <TextView
        android:id="@+id/tv_fastest_laptime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_finished4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_totalDist2"
        app:layout_constraintBottom_toTopOf="@id/tv_avg_laptime2"
        android:text="00:00:00"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_avg_laptime1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_average"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_finished3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_finished4"
        app:layout_constraintTop_toBottomOf="@id/tv_fastest_laptime1" />

    <TextView
        android:id="@+id/tv_avg_laptime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_finished3"
        app:layout_constraintStart_toStartOf="@id/guideline_finished4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fastest_laptime2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finished_backtomenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/finished_btn_back"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_finished3" />

</androidx.constraintlayout.widget.ConstraintLayout>